--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -362,7 +362,7 @@ appwrite client --debug // Prints your current configuration
 
         <p>or terminal</p>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm /usr/local/bin/appwrite | bash</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -f /usr/local/bin/appwrite | bash</code></pre>
         </div>
     </li>
     
@@ -376,7 +376,7 @@ appwrite client --debug // Prints your current configuration
     <li>
         <h4>Linux</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm /usr/local/bin/appwrite | bash</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -f /usr/local/bin/appwrite | bash</code></pre>
         </div>
     </li>
 </ul>
@@ -387,7 +387,7 @@ appwrite client --debug // Prints your current configuration
     <li>
         <h4>MacOS</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -r ~/.appwrite | bash</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -rf ~/.appwrite | bash</code></pre>
         </div>
     </li>
     
@@ -401,7 +401,7 @@ appwrite client --debug // Prints your current configuration
     <li>
         <h4>Linux</h4>
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -r ~/.appwrite | bash</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>rm -rf ~/.appwrite | bash</code></pre>
         </div>
     </li>
 </ul>
