feat: fixed anchor link

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -53,7 +53,7 @@
     </li>
 </ul>
 
-<h2><a href="/docs/getting-started-for-web#one-click-setups" id="one-click-setups">One-Click Setups</a></h2>
+<h2><a href="/docs/installation#one-click-setups" id="one-click-setups">One-Click Setups</a></h2>
 
 <p>
     In addition to running Appwrite locally, you can also launch Appwrite using a pre-configured setup.
