cannot use < and > in docs because the characters don't escape properly

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -61,7 +61,7 @@ brew install --HEAD appwrite</code></pre>
 <p>First, initialize your CLI by providing it your Appwrite server's endpoint</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint http://<API endpoint>/v1</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint https://[ENDPOINT]/v1</code></pre>
 </div>
 
 <p>Before you can use the CLI, you need to login to your Appwrite account using</p>
