PR review changes

--- a/app/views/docs/custom-domains.phtml
+++ b/app/views/docs/custom-domains.phtml
@@ -360,7 +360,7 @@ $dns = [
 
 <h2><a href="/docs/custom-domains#enjoySSLCert" id="enjoySSLCert">Enjoy your Free SSL Certificate</a></h2>
 
-<p>Appwrite uses <a href="https://letsencrypt.org/" target="_blank" rel="noopener">Letsencrypt</a> service to generate free and automated SSL certificates for your custom domains. Once your domain is verified, it will take the Appwrite server a few seconds to create a new SSL certificate for it. Once done, you will see your domain TLS setting marked as 'Enabled' in your Appwrite dashboard, and you will be able to connect the Appwrite API using your new domain.</p>
+<p>Appwrite uses <a href="https://letsencrypt.org/" target="_blank" rel="noopener">Let's Encrypt</a> service to generate free and automated SSL certificates for your custom domains. Once your domain is verified, it will take the Appwrite server a few seconds to create a new SSL certificate for it. Once done, you will see your domain TLS setting marked as 'Enabled' in your Appwrite dashboard, and you will be able to connect the Appwrite API using your new domain.</p>
 
 <h2><a href="/docs/custom-domains#connectCustomDomain" id="connectCustomDomain">Connect using Your Custom Domain</a></h2>
 
