correct formatting where a p tag is missing

--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -23,7 +23,7 @@
     </code></pre>
 </div>
 
-This is the parent directory, where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
+<p>This is the parent directory, where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
 
 <h3><a href="/docs/installation#unix" id="unix">Unix</a></h3>
 
