--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -14,7 +14,7 @@
 
 <!-- <p>The data migration tool will allow you to easily migrate your current Appwrite data to work with the new version. </p> -->
 
-<p> The first step is to install the latest version of Appwrite. Head to the directory where you ran your previous Appwrite install command. </p>
+<p>The first step is to install the latest version of Appwrite. Head to the directory where you ran your previous Appwrite install command. </p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>parent_directory  <= you run the command in this directory
@@ -23,7 +23,7 @@
     </code></pre>
 </div>
 
-<p>This is the parent directory, where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
+<p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
 
 <h3><a href="/docs/installation#unix" id="unix">Unix</a></h3>
 
