--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -16,8 +16,8 @@
 
 <p>The first step is to install the latest version of Appwrite. Head to the directory where you ran your previous Appwrite install command. </p>
 
-<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>parent_directory  <= you run the command in this directory
+<div class="ide margin-bottom">
+    <pre class="line-numbers"><code class="prism" data-prism>parent_directory  <= you run the command in this directory
     └── appwrite
         └── docker-compose.yml
     </code></pre>
