--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -17,10 +17,9 @@
 <p>The first step is to install the latest version of Appwrite. Head to the directory where you ran your previous Appwrite install command. </p>
 
 <div class="ide margin-bottom">
-    <pre class="line-numbers"><code class="prism" data-prism>parent_directory  <= you run the command in this directory
+    <pre class="line-numbers"><code class="prism" data-prism>parent_directory <= you run the command in this directory
     └── appwrite
-        └── docker-compose.yml
-    </code></pre>
+        └── docker-compose.yml</code></pre>
 </div>
 
 <p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
