add more missing p tags to adjust spacing

--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -33,7 +33,7 @@
     --entrypoint="install" \
     appwrite/appwrite:[NEXT MAJOR VERSION]</code></pre>
 </div>
-Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">`[NEXT MAJOR VERSION]`</span> with the next major version of Appwrite.
+<p>Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">[NEXT MAJOR VERSION]</span> with the next major version of Appwrite.</p>
 
 <h3><a href="/docs/installation#windows" id="windows">Windows</a></h3>
 
@@ -48,7 +48,7 @@ Recall that you can only upgrade to <b>immediately higher versions</b>. Replace 
     --entrypoint="install" ^
     appwrite/appwrite:[NEXT MAJOR VERSION]</code></pre>
         </div>
-        Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">`[NEXT MAJOR VERSION]`</span> with the next major version of Appwrite.
+        <p>Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">[NEXT MAJOR VERSION]</span> with the next major version of Appwrite.</p>
     </li>
     <li>
         <h4>PowerShell</h4>
@@ -60,11 +60,9 @@ Recall that you can only upgrade to <b>immediately higher versions</b>. Replace 
     --entrypoint="install" ,
     appwrite/appwrite:[NEXT MAJOR VERSION]</code></pre>
         </div>
-        Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">`[NEXT MAJOR VERSION]`</span> with the next major version of Appwrite.
+        <p>Recall that you can only upgrade to <b>immediately higher versions</b>. Replace <span class="tag">[NEXT MAJOR VERSION]</span> with the next major version of Appwrite.</p>
     </li>
 </ul>
-
-<p>
 
 <p>This will pull the <b>docker-compose.yml</b> file for the new version and perform the installation. Once the setup completes, verify that you have the latest version of Appwrite.</p>
 
