Remove the style form name table head.
Removed the style form name table head so I can fit better in the mobile view

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -613,7 +613,7 @@ class MainActivity : AppCompatActivity() {
     <thead>
         <tr>
             <th style="width: 50px"></th>
-            <th style="width: 120px">Name</th>
+            <th>Name</th>
             <th>Image</th>
             <th>Architectures</th>
         </tr>
