PR review changes

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -381,7 +381,7 @@ appwrite client --debug // Prints your current configuration
     </li>
 </ul>
 
-<p>You can also remove configuration, cookies and API Keys that Appwrite CLI used to work properly. To remove those, run the following command.</p>
+<p>You can also remove configuration, cookies, and API Keys that Appwrite CLI stored. To remove those, run the following command.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
