--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -350,7 +350,7 @@ appwrite client --debug // Prints your current configuration
     <pre class="line-numbers"><code class="prism language-bash" data-prism>npm uninstall -g appwrite-cli</code></pre>
 </div>
 
-<p>If you installed Appwrite CLI with dependency-free installation script for your operating system, use the following command to uninstall Appwrite CLI.</p>
+<p>If you installed the Appwrite CLI with brew or the installation script for your operating system, use the following command to uninstall it.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
