--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -384,6 +384,35 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
     <p>If you're running Appwrite locally and trying to connect to your local Appwrite instance from a cloud function, you'll have to use your local IP address in place of localhost. This is because, within the container localhost does not refer to the host machine rather the container itself. </p>
 </div>
 
+<h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
+
+<p>Libraries folder such as <b>node_modules</b> or <b>vendor</b> should not be included in the tarball, although you want them locally to have full IDE support. Similarly, you should keep files holding secrets out of your deployment. You can use Appwite CLI feature <b>file ignoring</b> to exclude specific files from a deployment.</p>
+
+<p>You visit <b>appwrite.json</b> file and look for function definition. In there, you can set value for <b>ignore</b> key to specify which files and folders should be ignored. This value must be array, as seen in example below:</p>
+
+<div class="ide margin-bottom" data-lang="json" data-lang-label="JSON">
+    <pre class="line-numbers"><code class="prism language-json" data-prism>{
+    ...
+    "functions": [
+        {
+            "$id": "6213b58cb21dda6c3263",
+            "name": "My Awesome Function",
+            "runtime": "node-17.0",
+            "path": "My Awesome Function",
+            "entrypoint": "src/index.js",
+            "ignore": [ "node_modules", ".env", "google.json" ]
+        },
+        ...
+    ],
+}</code></pre>
+</div>
+
+<p>The example configuration above would not deploy folder <b>node_modules</b>, and files <b>.env</b> and <b>google.json</b>.</p>
+
+<p>Alternatively, you can add <b>.gitignore</b> file into your function folder and Appwrite CLI will ignore files specified in there. Keep in ming that ignore configuration in <b>appwrite.json</b> must bot be present for <b>.gitignore</b> to be used.</p>
+
+<p>If you want to have <b>.gitignore</b> file for your version control and don't want Appwrite CLI to use it, you can specify ignore key in <b>appwrite.json</b> to be empty array.</p>
+
 <h2><a href="/docs/functions#createFunction" id="createFunction">Create your Function</a></h2>
 
 <p>Before you can deploy your function, you will need to create a new function from your Appwrite project's dashboard. Access the Function settings from your project's left navigation panel. Click the 'Add Function' button and choose a function name and runtime. In your Functions settings page, you can also set your function event triggers, CRON schedule, and set secure environment variables for your function. </p>
