--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -22,7 +22,7 @@
         └── docker-compose.yml</code></pre>
 </div>
 
-<p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which contains the <b>docker-compose.yml</b> and <b>.env</b> files.</p>
+<p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which there are <b>docker-compose.yml</b> and <b>.env</b> files.</p>
 
 <h3><a href="/docs/installation#unix" id="unix">Unix</a></h3>
 
