Add header for notice

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -91,6 +91,7 @@ brew install --HEAD appwrite</code></pre>
 <p>The CLI also handles the creation and deployment of Appwrite's Cloud Functions. You can initialize a new function using</p>
 
 <div class="notice margin-bottom"> 
+    <h3>Prerequisites</h3> 
     <p>Creating a new function using the Appwrite CLI requires <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank" rel="noopener">Git to be installed</a> on your machine.</p>
 </div>
 
