explains the example

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -23,7 +23,7 @@ $channels = [
 
 <p>Instead of requesting new data via HTTP, the subscription will receive new data every time it changes, any connected client receives that update within milliseconds via a WebSocket connection.</p>
 
-<p>This lets you build an interactive and responsive user experience by providing information from all of Appwrite's services in realtime.</p>
+<p>This lets you build an interactive and responsive user experience by providing information from all of Appwrite's services in realtime. The example below shows subscribing to realtime file changes.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
