--- a/app/views/docs/certificates.phtml
+++ b/app/views/docs/certificates.phtml
@@ -34,7 +34,7 @@
 <p>If you want to generate a certificate for a specific domain, pass it as a parameter into the command:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose exec appwrite ssl domain=api.myapp.com</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose exec appwrite ssl domain="api.myapp.com"</code></pre>
 </div>
 
 <h2>Dev Environment and Localhosts</h2>
