--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -103,7 +103,7 @@ val json = response.body?.string()</code></pre>
 val realtime = Realtime(client)
 
 realtime.subscribe("files", callback = { response ->
-    if(response.event === 'storage.files.create') {
+    if(response.event == "storage.files.create") {
         // Log when a new file is uploaded
         print(response.payload.toString());
     }
@@ -130,7 +130,7 @@ val json = response.body?.string()
 val realtime = Realtime(client)
 
 realtime.subscribe("files", callback = { response ->
-    if(response.event === "storage.files.create") {
+    if(response.event == "storage.files.create") {
         // Log when a new file is uploaded
         print(response.payload.toString());
     }
