fix array offset

--- a/app/views/docs/webhooks.phtml
+++ b/app/views/docs/webhooks.phtml
@@ -81,7 +81,7 @@ $events = $this->getParam('events', []);
     ?>
     <tr>
         <td>
-            <?php echo $this->escape($event); ?>
+            <?php echo $this->escape($pattern); ?>
         </td>
         <td>
         <?php if(!empty($model)): ?>
