--- a/app/views/docs/webhooks.phtml
+++ b/app/views/docs/webhooks.phtml
@@ -33,8 +33,8 @@ $events = $this->getParam('events', []);
         <td>The ID of the Webhook who triggered the event.</td>
     </tr>
     <tr>
-        <td>X-Appwrite-Webhook-Event</td>
-        <td>Name of the event that triggered this delivery.</td>
+        <td>X-Appwrite-Webhook-Events</td>
+        <td>Names of the events that triggered this delivery.</td>
     </tr>
     <tr>
         <td>X-Appwrite-Webhook-Name</td>
